# cinegraph-dataset-builder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
cinegraph/: __init__.py  config.py
cinegraph/api/: client.py
cinegraph/discovery/: movies.py  references.py  tv.py
cinegraph/fetchers/: lite.py  movie.py  person.py  review.py  tv.py
cinegraph/orchestration/: executor.py  pipeline.py
cinegraph/processing/: parsers.py  storage.py  transforms.py
cinegraph/utils/: logging.py
data/: DATA_DICTIONARY.csv  README.md  RELATIONSHIP_DIAGRAM.drawio
docs/: ARCHITECTURE.md  SCHEMA.md
notebooks/: cinegraph_dataset_overview.ipynb
scripts/: run_pipeline.py  validate_dataset.py
tests/: test_parsers.py  test_references.py  test_transforms.py
